service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mhc-acs
  namespace: backend
spec:
  selector:
    app: mhc-acs
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
